--- a/KosaESS/src/main/resources/static/css/manager/manager_class_detail.css
+++ b/KosaESS/src/main/resources/static/css/manager/manager_class_detail.css
@@ -8,7 +8,6 @@
 
 table {
 	table-layout:fixed;
-	border: 2px solid #0E5881;
 	border-collapse: collapse;
 	width: 100%;
 	margin-bottom: 5%;
@@ -24,8 +23,9 @@ table {
 }
 
 th, td {
-	border: 2px solid #0E5881;
+/* 	border: 2px solid #0E5881; */
 	border-collapse: collapse;
+	border: 1px solid #9FBCCD;
 }
 
 table td {
@@ -83,4 +83,115 @@ table th {
 .download_img{
 	width:20px;
 	height:20px;
+}
+
+.content a {
+/* 	color: black; */
+}
+
+.crclTable {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.crclTable table {
+	width: 80%;
+	border:1px solid #9FBCCD;
+}
+
+.content h3{
+	margin-block-start: 1em;
+	margin-block-end: 1em;
+	margin-inline-start: 0px;
+	margin-inline-end: 0px;
+	text-align: center;
+}
+.content h4{
+	text-align: left;
+	width: 80%;
+	margin: auto;
+}
+
+#class_list td a{
+	text-decoration: none;
+	color: #0E5881;
+	font-weight: bold;
+}
+
+.classFile {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+ul {
+	text-align: center;
+	list-style-type: none;
+	padding: 0;
+}
+
+.classFile li {
+	padding-bottom: 2%;
+}
+
+.classFile img {
+	width: 600px;
+}
+
+.btn {
+	text-align: center;
+	display: flex;
+	justify-content: space-evenly;
+	border: 0;
+}
+
+.crclTable th {
+	background-color: #E7EFF3;
+}
+.crclTable td {
+	font-weight: bold;
+}
+
+.crclTable .fixed_length_content {
+	text-align: center;
+}
+
+.crclTable .variable_length_content{
+	text-align: left;
+	padding-left: 1em;
+}
+
+.btn button {
+	padding: 0 3%;
+	border: 0;
+}
+
+.class_about{
+/* 	align-items: center; */
+/* 	justify-content: center; */
+	display: block;
+}
+
+.content .class_detail_table{
+	width:80%;
+}
+
+.content .class_detail_table .variable_length_content{
+	text-align: left;
+	padding-left: 1em;
+}
+
+
+.content .class_detail_table .fixed_length_content{
+	text-align: center;
+}
+
+.content .class_detail_table td{
+	font-weight: bold;
+}
+.content .class_detail_div{
+	width: 80%;
+	display:inline-block;
+	justify-content: center;
 }
