--- a/KosaESS/src/main/resources/templates/manager/class_list.html
+++ b/KosaESS/src/main/resources/templates/manager/class_list.html
@@ -44,9 +44,10 @@
 							</li>
 						</ul>
 					</div>
-				</div>
-				<div class="search_by_name_btn_wrap">
-					<input type="button" id="search_by_name_btn" value="검색" onclick="search()">
+					<div class="search_btn_wrap">
+						<input type="button" id="search_reset_btn" value="초기화" onclick="search()">
+						<input type="button" id="search_by_name_btn" value="검색" onclick="search()">
+					</div>
 				</div>
 			</div>
 			<!-- End 검색 필터 부분 -->
