--- a/KosaESS/src/main/resources/templates/manager/student_list.html
+++ b/KosaESS/src/main/resources/templates/manager/student_list.html
@@ -30,23 +30,32 @@
 							<td style="width: 30%;">
 								<select id="classId">
 									<option value="" disabled selected>교육과정명을 선택하세요</option>
-<!-- 									<option th:each="class:${classList}" th:text="${class.clssNm}" th:value="${class.clssId}" > -->
 									<option th:each="class:${classList}" th:text="${class.clssNm}" th:value="${class}" />
 								</select>
 							</td>
-							<td style="width: 10%;">기간</td>
+							<td style="width: 10%;">검색 기간</td>
 							<td style="width: 30%;"><input type="date" id="startDate"><span> ~ </span><input type="date" id="endDate"></td>
 						</tr>
 						<tr>
 							<td style="width: 10%;">검색어</td>
-							<td style="width: 30%;"><input></td>
-							<td style="width: 10%;">이수여부</td>
-							<td style="width: 30%;"></td>
+							<td style="width: 30%;"><input type="text" class="input_keyword" placeholder="이메일 또는 이름"></td>
+							<td style="width: 10%;">이수 상태</td>
+							<td style="width: 30%;">
+								<span class="chk_all_span">
+									<label th:text="전체" class="chk_all_label"></label>
+									<input type="checkbox" checked="checked" id="chk_all_cmpt">
+								</span>
+								<span class="chk_all_span" th:each="cmptCN:${cmptCodeNameList}">
+									<label class="cmpt_name" th:text="${cmptCN.cmcdNm}"></label>
+									<input class="cmpt_checkbox" type="checkbox" checked="checked" th:value="${cmptCN.cmcdId}">
+								</span>
+							</td>
 						</tr>
 					</table>
 				</div>
 				<!-- 검색 버튼 -->
 				<div class="search_filter_btn_wrap">
+					<button class="search_reset_btn" th:id="resetButton" onclick="reset()">초기화</button>
 					<button class="search_filter_btn" th:id="searchButton" onclick="search()">검색</button>
 				</div>
 				<!-- End : 검색 버튼 -->
@@ -77,20 +86,20 @@
 						<th>생년월일</th>
 						<th th:each="wlogCodeName:${wlogCodeNameList}" th:text="${wlogCodeName.cmcdNm}"></th>
 						<th>이수율<br>(%)</th>
-						<th>이수여부</th>
+						<th>이수 상태</th>
 					</tr>
 				</thead>
 				<tbody id="stdt_list_table_tbody" class="stdt_list_table_tbody">
 					<tr th:each="stdt:${stdtList}" class="stdt_list_table_row">
-						<td><input type="checkbox" name="checkedStdt" th:value="${stdt.stdtId}"></td>
-						<td th:text="${stdtStat.count}"></td>
-						<td th:text="${stdt.stdtNm}"></td>
+						<td class="fixed_length_cell"><input type="checkbox" name="checkedStdt" th:value="${stdt.stdtId}"></td>
+						<td class="fixed_length_cell" th:text="${stdtStat.count}"></td>
+						<td class="fixed_length_cell" th:text="${stdt.stdtNm}"></td>
 						<td th:text="${stdt.userEmail}">이메일</td>
-						<td th:text="${stdt.stdtTel}">연락처</td>
-						<td th:text="${stdt.genderCd}">성별</td>
-						<td th:text="${stdt.birthDd}">생년월일</td>
-						<td th:each="wlogCodeName:${wlogCodeNameList}" th:text="${#strings.substring(#strings.setSplit(stdt.wlogCnt,',')[wlogCodeNameStat.count-1],10,)}">?</td>
-						<td th:text="${#numbers.formatDecimal(stdt.cmptRate, 1, 1)}"></td>
+						<td class="fixed_length_cell" th:text="${stdt.stdtTel}">연락처</td>
+						<td class="fixed_length_cell" th:text="${stdt.genderCd}">성별</td>
+						<td class="fixed_length_cell" th:text="${stdt.birthDd}">생년월일</td>
+						<td class="number_cell" th:each="wlogCodeName:${wlogCodeNameList}" th:text="${#strings.substring(#strings.setSplit(stdt.wlogCnt,',')[wlogCodeNameStat.count-1],10,)}">?</td>
+						<td class="number_cell" th:text="${#numbers.formatDecimal(stdt.cmptRate, 1, 1)}"></td>
 						<td th:text="${stdt.jobCd}">이수여부</td>
 					</tr>
 				</tbody>
